solved the count alignment issue

--- a/admin/css/commenting-block-admin.css
+++ b/admin/css/commenting-block-admin.css
@@ -58,7 +58,7 @@ span.user-name{font-weight:700}
 #custom-history-popup table td{padding:15px 0}
 #comments-toggle.active, #history-toggle.active{color:#4B1BCE}
 #history-toggle{line-height:normal}
-#history-toggle::before{content:attr(data-count);position:absolute;top:0;right:0;background:#f02849;color:#FFFFFF;padding:2px;border-radius:10px;font-size:9px;font-weight:600;width:18px;height:18px;text-align:center;box-sizing:border-box}
+#history-toggle::before{content:attr(data-count);position:absolute;top:0;right:0;background:#f02849;color:#FFFFFF;padding:2px;border-radius:10px;font-size:9px;font-weight:600;width:18px;height:18px;text-align:center;box-sizing:border-box;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
 .block-editor-editor-skeleton__body{position:relative}
 .comment-header .buttons-holder .buttons-wrapper{display:none;position:absolute;background:#fff;box-shadow:rgba(60, 64, 67, 0.15) 0 2px 6px 2px;right:0;border-radius:4px;padding-top:5px;z-index:1}
 .comment-header .buttons-holder.is_active .buttons-wrapper{display:block}
